# ProtoForge

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  ARCHITECTURE.md  BUILDING_AGENTS.md  CHANGELOG.md  CLAUDE.md  GUIDE.md  GUIDE2.md  MAINTENANCE.md  README.md  SOURCE_OF_TRUTH.md  TODO.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: architect.md  doc-maintainer.md
.github/instructions/: agent-development.instructions.md  forge-yaml.instructions.md  governance-hitl.instructions.md  test-conventions.instructions.md
.github/prompts/: add-agent.prompt.md  add-endpoint.prompt.md  doc-audit.prompt.md
.github/skills/add-agent/: SKILL.md
.github/skills/budget-calculator/: SKILL.md
.github/workflows/: ci.yml
forge/: _context_window.yaml  _registry.yaml
forge/agents/code_research/: agent.yaml
forge/agents/code_research/instructions/: search_patterns.md
forge/agents/code_research/prompts/: system.md
forge/agents/data_analysis/: agent.yaml
forge/agents/data_analysis/instructions/: analysis_methods.md
forge/agents/data_analysis/prompts/: system.md
forge/agents/data_analysis/skills/: analyze_data.yaml
forge/agents/github_tracker/: agent.yaml
forge/agents/github_tracker/instructions/: commit_conventions.md
forge/agents/github_tracker/prompts/: system.md
forge/agents/github_tracker/skills/: document_commit.yaml  generate_changelog.yaml  manage_issues.yaml
forge/agents/knowledge_base/: agent.yaml
forge/agents/knowledge_base/instructions/: sources.md
forge/agents/knowledge_base/prompts/: system.md
forge/agents/log_analysis/: agent.yaml
forge/agents/log_analysis/instructions/: log_formats.md
forge/agents/log_analysis/prompts/: system.md
forge/agents/log_analysis/skills/: analyze_logs.yaml
forge/agents/remediation/: agent.yaml
forge/agents/remediation/instructions/: fix_patterns.md
forge/agents/remediation/prompts/: system.md
forge/agents/security_sentinel/: agent.yaml
forge/agents/security_sentinel/instructions/: frameworks.md
forge/agents/sub_plan/: agent.yaml
forge/agents/workiq/: agent.yaml
forge/contrib/: README.md  audit_log.yaml
forge/plan/: agent.yaml
forge/plan/instructions/: coordination.md  routing_rules.md
forge/plan/prompts/: decomposition.md  routing.md  strategy.md  system.md
forge/plan/skills/: build_strategy.yaml  identify_agents.yaml
forge/plan/workflows/: plan_and_execute.yaml
forge/shared/instructions/: governance_rules.md  quality_standards.md  security_baseline.md
forge/shared/prompts/: error_handling.md  output_format.md
forge/shared/workflows/: code_review.yaml
llm-instructions/: README.md  claude.md  cursorrules.md  windsurfrules.md
scripts/: check_drift.py
skills/: code_research.yaml  knowledge_base.yaml  plan.yaml  remediation.yaml  security_scan.yaml
src/: __init__.py  config.py  main.py  server.py  server_models.py
src/agents/: __init__.py  base.py  code_research_agent.py  data_analysis_agent.py  generic.py  github_tracker_agent.py  knowledge_base_agent.py  log_analysis_agent.py  plan_agent.py  remediation_agent.py  security_sentinel_agent.py  sub_plan_agent.py  workiq_agent.py
src/forge/: __init__.py  context_budget.py  contributions.py  loader.py
src/governance/: __init__.py  guardian.py  selector.py
src/llm/: __init__.py  client.py
src/mcp/: __init__.py  protocol.py  server.py  skills.py
src/orchestrator/: __init__.py  context.py  engine.py  hitl_utils.py  input_guardrails.py  plan_selector.py  router.py
src/registry/: __init__.py  catalog.py  workflows.py
src/server_routes/: __init__.py  chat.py  core.py  github.py  governance.py  system.py  workiq_plan.py
src/templates/: inspector.html
src/workiq/: __init__.py  client.py  selector.py
tests/: __init__.py  conftest.py  test_copilot_customization.py  test_forge.py  test_github_tracker.py  test_governance.py  test_llm.py  test_llm_live.py  test_mcp.py  test_orchestrator.py  test_registry.py  test_router.py  test_server.py  test_sub_plan.py  test_workflows.py  test_workiq.py
workflows/: incident_response.yaml
(+7 files in other folders)
