[project]
name = "protoforge"
version = "0.1.0"
description = "Multi-agent orchestrator with MCP skills distribution, agent registry, and workflow bundling"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ProtoForge Team" }]

dependencies = [
    "semantic-kernel>=1.15.0",
    "azure-identity>=1.19.0",
    "azure-ai-projects>=1.0.0",
    "openai>=1.60.0",
    "mcp>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.scripts]
protoforge = "src.main:cli_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
