[project]
name = "protoforge"
version = "0.1.1"
description = "Multi-agent orchestrator with MCP skills distribution, agent registry, and workflow bundling"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ProtoForge Team" }]

dependencies = [
    "azure-identity>=1.19.0",
    "azure-ai-projects>=1.0.0",
    "openai>=1.60.0",
    "mcp>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
protoforge = "src.main:cli_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "C4",   # flake8-comprehensions
    "ERA",  # eradicate (commented-out code)
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "PIE",  # flake8-pie
    "PERF", # perflint
]

[tool.ruff.lint.per-file-ignores]
"src/server.py" = ["E501"]         # HTML/CSS/JS templates in dashboard
"tests/**" = ["S101", "ARG001"]    # assert + unused fixture args are fine in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "live: marks tests that hit real Azure endpoints (deselect with '-m \"not live\"')",
]

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
